# finance-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  finance-manager.sln
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
docs/: Doxyfile
finance-manager/: RCa10932  card-operation.cpp  card-operation.h  card.cpp  card.h  categories.h  cost.h  deposit.cpp  deposit.h  finance-manager.cpp  finance-manager.vcxproj  finance-manager.vcxproj.filters  helper.cpp  helper.h  history-operation.cpp  history-operation.h  history-period.h  history.h  menu.cpp  menu.h  report.cpp  report.h  user.cpp  user.h  wallet.cpp  wallet.h
finance-manager/models/: report.h
finance-manager/services/: report-service.cpp  report-service.h
test/: CMakeLists.txt  test-rebalance.cpp  test-registration.cpp
test-user/: test-user.cpp
